--- a/checkout-and-setup-ruby/action.yml
+++ b/checkout-and-setup-ruby/action.yml
@@ -21,11 +21,6 @@ runs:
       with:
         node-version: '16'
 
-    - name: Run yarn install
-      if: ${{ inputs.run_yarn_install }}
-      run: yarn install
-      shell: bash
-
     - name: Get yarn cache dir
       id: yarn-cache-dir
       run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
@@ -39,3 +34,8 @@ runs:
         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-yarn
+
+    - name: Run yarn install
+      if: ${{ steps.yarn-cache.outputs.cache-hit != 'true' }}
+      run: yarn install
+      shell: bash
