--- a/checkout-and-setup-ruby/action.yml
+++ b/checkout-and-setup-ruby/action.yml
@@ -2,7 +2,9 @@ name: 'Checkout and setup ruby'
 description: 'This action checks out the commit, sets up Node and installs deps using yarn.'
 
 inputs:
-  run_yarn_install:
+  ruby_version:
+    required: true
+  node_version:
     required: true
 
 runs:
@@ -10,32 +12,18 @@ runs:
   steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Ruby 3.1.2
+    - name: Set up Ruby ${{ inputs.ruby_version }}
       uses: ruby/setup-ruby@v1
       with:
         bundler-cache: true
-        ruby-version: 3.1.2
+        ruby-version: ${{ inputs.ruby_version }}
 
-    - name: Install node
+    - name: Install node ${{ inputs.node_version }}
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '${{ inputs.node_version }}'
+        cache: 'yarn'
 
-    - name: Get yarn cache dir
-      id: yarn-cache-dir
-      run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
-      shell: bash
-
-    - name: Cache node_modules installation
-      id: yarn-cache
-      uses: actions/cache@v3
-      with:
-        path: ${{ steps.yarn-cache-dir.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn
-
-    - name: Run yarn install
-      if: ${{ steps.yarn-cache.outputs.cache-hit != 'true' }}
-      run: yarn install
+    - name: Run yarn
+      run: yarn
       shell: bash
