--- a/checkout-and-setup-ruby-and-node/action.yml
+++ b/checkout-and-setup-ruby-and-node/action.yml
@@ -15,7 +15,8 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Set up Ruby ${{ inputs.ruby_version }}
       uses: ruby/setup-ruby@v1
