Checkout repository before running local action

--- a/capistrano-staging-deploy/action.yml
+++ b/capistrano-staging-deploy/action.yml
@@ -29,6 +29,8 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - uses: actions/checkout@v4
+
     - name: Setup rails dependencies
       uses: ./setup-rails-dependencies
       with:
