--- a/capistrano-staging-deploy/action.yml
+++ b/capistrano-staging-deploy/action.yml
@@ -35,7 +35,7 @@ runs:
     - name: Setup rails dependencies
       uses: deemaze/rails_actions/setup-rails-dependencies@v2
       with:
-        ruby_version: 3.2.2
+        ruby_version: ${{ inputs.ruby_version }}
 
     - name: Setup ssh-agent
       uses: webfactory/ssh-agent@v0.6.0
